Revision history for DBIx-NoSQL-Store-Manager

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - ensure class names are db-friendly (replace '::' by '_')
 - fix calls to next()

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

0.2.0 2012-11-23
 [ENHANCEMENTS]
 - method 'create' as a shorter alias to 'new_model_object'
 - search() functionality now work

 [STATISTICS]
 - code churn: 8 files changed, 39 insertions(+), 17 deletions(-)

0.1.1 2012-09-30
 [BUG FIXES]
 - Explicitly require perl 5.10.0

 [STATISTICS]
 - code churn: 2 files changed, 16 insertions(+)

0.1.0 2012-09-21
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 3 files changed, 6 insertions(+), 3 deletions(-)
