@@ -6,6 +6,7 @@ Revision history for DBIx-NoSQL-Store-Manager
  [BUG FIXES]
  - ensure class names are db-friendly (replace '::' by '_')
  - fix calls to next()
+ - Make the building of the store a bit more sane.
 
  [DOCUMENTATION]
 
